shared_logic/tests/ui/arithmetic_operation_type_contract_rejects_boolean_argument.rs
use shared_logic::CalculationRequest;

fn main() {
    let _invalid_request = CalculationRequest::new(true, 1, 2);
}
